fix for footer overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -1454,15 +1454,24 @@ main {
 
 
 footer{
-  position: fixed;
+  position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: black;
     color: white;
     text-align: center;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 footer li{
   list-style: none;
+}
+
+@media screen and (max-width: 425px) {
+  footer > div{
+    font-size: 10px;
+  }
 }
